--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,7 @@ server.port=8090
 spring.datasource.url=jdbc:postgresql://192.168.132.148:5432/kong
 spring.datasource.username=kong
 spring.datasource.password=kong
+
+spring.elasticsearch.uris=http://192.168.132.148:9200
+spring.elasticsearch.username=elastic
+spring.elasticsearch.password=elastic
