--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.url=jdbc:postgresql://192.168.132.148:5432/kong
 spring.datasource.username=kong
 spring.datasource.password=kong
 
+# ElasticSearch
 spring.elasticsearch.uris=http://192.168.132.148:9200
 spring.elasticsearch.username=elastic
 spring.elasticsearch.password=elastic
