--- a/src/front/package.json
+++ b/src/front/package.json
@@ -82,5 +82,6 @@
     "last 2 versions",
     "not IE <= 11"
   ],
-  "packageManager": "pnpm@9.9.0"
+  "packageManager": "pnpm@9.9.0",
+  "proxy": "http://localhost:8090"
 }
